Add Doctrine-level image cascade delete

--- a/src/Marek/ArticlesBundle/Resources/config/doctrine/Article.orm.yml
+++ b/src/Marek/ArticlesBundle/Resources/config/doctrine/Article.orm.yml
@@ -34,5 +34,6 @@ Marek\ArticlesBundle\Entity\Article:
         images:
             targetEntity: Image
             mappedBy: article
+            cascade: [remove]
     lifecycleCallbacks:
         prePersist: [setCreatedOnValue]
